<resources>
    <string name="app_name">Calculadora de Area</string>
    <string name="action_settings">Settings</string>
    <string name="circulo">Circulo</string>
    <string name="quadrado">Quadrado</string>
    <string name="triangulo">Triangulo</string>
    <string name="avancar">Avançar</string>
    <string name="enunciado1">Selecione a forma :</string>
    <string name="enunciado2">Informe os dados do Quadrado :</string>
    <string name="enunciado3">Informe o raio do Circulo :</string>
    <string name="base">Base : </string>
    <string name="altura">Altura : </string>
    <string name="raio">Raio :</string>
    <string name="title_activity_calcala_circulo">CalcalaCirculoActivity</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
