<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.david.calculadoraarea.MainActivity">

    <TextView
        android:id="@+id/tvAAA"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/enunciado1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="avancar"
        android:text="@string/avancar"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/rgFormato"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalcular"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAAA"
        app:layout_constraintVertical_bias="0.35000002">

        <RadioButton
            android:id="@+id/rbQuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/quadrado"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="198dp" />

        <RadioButton
            android:id="@+id/rbTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="198dp" />

        <RadioButton
            android:id="@+id/rbCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.63"
            android:text="@string/circulo"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="198dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
