<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.david.calculadoraarea.InformarDadosActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:onClick="avancarCalcular"
        android:text="@string/avancar"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgFormato"
        tools:ignore="RtlHardcoded,UnknownIdInLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        tools:ignore="MissingConstraints"
        android:id="@+id/tvBase"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etBase"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enunciado2"
        android:textSize="20dp"
        tools:ignore="RtlHardcoded,SpUsage"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvBase"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvAltura"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etAltura"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAltura" />

    <EditText
        android:id="@+id/etAltura"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toTopOf="@+id/button2" />

</android.support.constraint.ConstraintLayout>
